src/test/deca/context/invalid/fields/selection_on_string.deca
// Description :
//    Sélection de champ sur une expression de type string.
//
// Resultats :
//    Erreur contextuelle
//    Ligne <No_de_ligne> : <message d'erreur de votre compilateur>

{
    string s = "abc";
    int y = s.z;
}

